# my-awesome-test-application

./: .gitignore  CLAUDE.md  README.md  members.csv  pyproject.toml
my_awesome_test_application/: __init__.py  __main__.py  reader.py
tests/: test_reader.py
